Closed Bug 1620951 Opened 5 years ago Closed 5 years ago

Fix degenerate conic-gradient handling on non-WebRender

Categories

(Core :: Web Painting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: ntim, Assigned: ntim)

References

Details

Attachments

(1 file)

Bug 1616986 caught this.

Any repeating conic gradient with a stop delta of 0 seems to break either Skia or the Web Painting code (not sure which yet, still need to debug)

Assignee: nobody → ntim.bugs
Status: NEW → ASSIGNED

I was working around stopDelta being 0 all the time for conic-gradient since it doesn't have a gradient line and disabled the needed normalization code. This patch fixes the definition of stopDelta for conic gradients and re-enables the normalization code.

Pushed by ntim.bugs@gmail.com: https://hg.mozilla.org/integration/autoland/rev/2a982461f06f Fix definition of conic-gradient stopDelta in nsCSSGradientRenderer::Paint. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: