Bug 1620951 - Fix definition of conic-gradient stopDelta in nsCSSGradientRenderer::Paint. r=emilio

I was working around stopDelta always being 0 for conic-gradient since it doesn't have a gradient line and disabled the essential normalization code. This patch fixes the definition of stopDelta for conic gradients and re-enables the normalization code.

Differential Revision: https://phabricator.services.mozilla.com/D65994